--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     <div id="info">
       dudes 0.0.1 - <span id="fps">···</span><br />
       <a href="https://dani.gatunes.com" rel="noopener noreferrer" target="_blank">dani@gatunes</a> © 2021<br />
-      made with <a href="https://threejs.org/" rel="noopener noreferrer" target="_blank">three.js</a>
+      made with <a href="https://threejs.org/" rel="noopener noreferrer" target="_blank">three.js</a><br />
+      music from
+      <a href="https://sebsauvage.net/ambient" rel="noopener noreferrer" target="_blank">sebsauvage</a>
     </div>
     <a id="ribbon" href="https://github.com/sponsors/danielesteban" data-ribbon="♥ Become a sponsor" rel="noopener noreferrer" target="_blank">
       ♥ Become a sponsor
