--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="/index.css">
     <script type="module" src="/main.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/three@0.127.0/examples/js/libs/ammo.wasm.js"></script>
+    <meta property="og:title" content="dudes" />
+    <meta property="og:image" content="https://dudes.gatunes.com/screenshot.png" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
   </head>
   <body>
