Serve ammo locally

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>dudes</title>
     <link rel="stylesheet" href="/index.css">
     <script type="module" src="/main.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/libs/ammo.wasm.js"></script>
+    <script type="text/javascript" src="/ammo.wasm.js"></script>
     <meta property="og:title" content="dudes" />
     <meta property="og:image" content="https://dudes.gatunes.com/screenshot.png" />
     <meta name="twitter:card" content="summary_large_image" />
