--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
         <p>
           <strong>VR controls</strong><br />
           Right thumbstick: Pitch&Yaw<br />
-          A and X: Up&Down<br />
-          Trigger: Release hooks
+          Left thumbstick: Up&Down<br />
+          Trigger: Release hooks<br />
+          A/X: Switch View
         </p>
         <p>
           I also plan to release the full source of the engine/game. I just haven't got to cleaning it up and keep adding stuff like there's no tomorrow. But I promise it will eventually happen haha.
