Long awaited menu!

--- a/index.html
+++ b/index.html
@@ -68,30 +68,20 @@
           Welcome, my dudes!
         </h2>
         <p>
-          This is a super alpha version of my new game: "Dudes!".<br />
-          The controls/camera are still super clunky but I wanted to test out if the main loop is fun before going forwards.
+          This is an alpha version of my new voxels engine: "Dudes!".<br />
+          The backend is written in C (compiled to WASM with LLVM) and it has the usual stuff plus 3D pathfinding and physics.
         </p>
         <p>
-          Help my main dude (up there at the booth) vibe the people of this town using the helicopter hooks to move the dudes from the lower terraces up to the party.
+          It features 4 demo scenes:
+          <ul>
+            <li>A helicopter gameplay where you help "The Chief" get dudes up to the terrace party.</li>
+            <li>Same party without the helicopter business (composability!).</li>
+            <li>Some state-of-the-art poop tech.</li>
+            <li>And a scene to debug the voxel building tools, the physics contact callbacks and the dudes pathfinding.</li>
+          </ul>
         </p>
         <p>
-          <strong>Desktop controls</strong><br />
-          W & S: Control pitch/speed<br />
-          A & D: Control yaw/direction<br />
-          Shift: Go down<br />
-          Spacebar: Go up<br />
-          F or Click: Release hooks<br />
-          V: Switch view
-        </p>
-        <p>
-          <strong>VR controls</strong><br />
-          Right thumbstick: Pitch&Yaw<br />
-          Left thumbstick: Up&Down<br />
-          Trigger: Release hooks<br />
-          A/X: Switch View
-        </p>
-        <p>
-          I also plan to release the full source of the engine/game. I just haven't got to cleaning it up and keep adding stuff like there's no tomorrow. But I promise it will eventually happen haha.
+          I also plan to release the full source. I just haven't finished cleaning it up and also keep adding stuff like there's no tomorrow. But I promise it will eventually happen haha.
         </p>
         <p>
           Much love,<br />
