--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
           The backend is written in C (compiled to WASM with LLVM) and it has the usual stuff plus 3D pathfinding and physics.
         </p>
         <p>
-          It features 4 demo scenes:
+          It features 5 demo scenes:
           <ul>
-            <li>A helicopter gameplay where you help "The Chief" get dudes up to the terrace party.</li>
-            <li>Same party without the helicopter business (composability!).</li>
-            <li>Some state-of-the-art poop tech.</li>
-            <li>And a scene to debug the voxel building tools, the physics contact callbacks and the dudes pathfinding.</li>
+            <li>01: The coolest rave party. You can change the song in VR by showing both thumbs down to "The Chief".</li>
+            <li>02: A helicopter gameplay where you help "The Chief" fly dudes up to the same terrace party (Composability!).</li>
+            <li>03: A worldgen happy accident (Custom worldgen!).</li>
+            <li>04: Some state-of-the-art poop tech.</li>
+            <li>05: A scene to debug the voxel building tools, the physics contact callbacks and the dudes pathfinding.</li>
           </ul>
         </p>
         <p>
@@ -94,7 +95,7 @@
       ♥ Become a sponsor
     </a>
     <div id="info">
-      dudes! 0.0.9 - <span id="fps">···</span><br />
+      dudes! 0.1.0 - <span id="fps">···</span><br />
       <a href="https://dani.gatunes.com" rel="noopener noreferrer" target="_blank">dani@gatunes</a> © 2021<br />
       made with <a href="https://threejs.org/" rel="noopener noreferrer" target="_blank">three.js</a>
     </div>
