--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@
           The backend is written in C (compiled to WASM with LLVM) and it has the usual stuff plus 3D pathfinding and physics.
         </p>
         <p>
-          It features 5 demo scenes:
+          It features 6 demo scenes:
           <ul>
-            <li>01: The coolest rave party. You can change the song in VR by showing both thumbs down to "The Chief".</li>
-            <li>02: A helicopter gameplay where you help "The Chief" fly dudes up to the same terrace party (Composability!).</li>
-            <li>03: A worldgen happy accident (Custom worldgen!).</li>
-            <li>04: Some state-of-the-art poop tech.</li>
-            <li>05: A scene to debug the voxel building tools, the physics contact callbacks and the dudes pathfinding.</li>
+            <li>01: A VR sculpting tool with import/export.</li>
+            <li>02: The coolest rave party. You can change the song in VR by showing both thumbs down to "The Chief".</li>
+            <li>03: A helicopter gameplay where you help "The Chief" fly dudes up to the same terrace party (Composability!).</li>
+            <li>04: A worldgen happy accident (Custom worldgen!).</li>
+            <li>05: Some state-of-the-art poop tech.</li>
+            <li>06: A scene to debug the voxel building tools, the physics contact callbacks and the dudes pathfinding.</li>
           </ul>
         </p>
         <p>
