--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
           It features 6 demo scenes:
           <ul>
             <li>01: A VR sculpting tool with import/export.</li>
-            <li>02: The coolest rave party. You can change the song in VR by showing both thumbs down to "The Chief".</li>
-            <li>03: A helicopter gameplay where you help "The Chief" fly dudes up to the same terrace party (Composability!).</li>
-            <li>04: A worldgen happy accident (Custom worldgen!).</li>
-            <li>05: Some state-of-the-art poop tech.</li>
-            <li>06: A scene to debug the voxel building tools, the physics contact callbacks and the dudes pathfinding.</li>
+            <li>02: A scene to debug the voxel building tools, the physics contact callbacks and the dudes pathfinding.</li>
+            <li>03: A helicopter gameplay where you help "The Chief" fly dudes up to the party.</li>
+            <li>04: A rave party where you can change the song by showing both thumbs down to "The Chief".</li>
+            <li>05: A worldgen happy accident.</li>
+            <li>06: Some state-of-the-art poop tech.</li>
           </ul>
         </p>
         <p>
