--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           It features 6 demo scenes:
           <ul>
             <li>01: A VR sculpting tool with import/export.</li>
-            <li>02: A scene to debug the voxel building tools, the physics contact callbacks and the dudes pathfinding.</li>
+            <li>02: A scene to debug the voxel updates, the physics contact callbacks and the dudes pathfinding.</li>
             <li>03: A helicopter gameplay where you help "The Chief" fly dudes up to the party.</li>
             <li>04: A rave party where you can change the song by showing both thumbs down to "The Chief".</li>
             <li>05: A worldgen happy accident.</li>
